WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211070
RTCPeerConnection should not remove its created remote MediaStream objects until getting close
https://bugs.webkit.org/show_bug.cgi?id=211070
Summary
RTCPeerConnection should not remove its created remote MediaStream objects un...
youenn fablet
Reported
2020-04-27 03:32:43 PDT
RTCPeerConnection should not remove its created remote MediaStream objects until getting close
Attachments
Patch
(9.63 KB, patch)
2020-04-27 03:34 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-04-27 03:34:00 PDT
Created
attachment 397667
[details]
Patch
EWS
Comment 2
2020-04-28 03:08:57 PDT
Committed
r260814
: <
https://trac.webkit.org/changeset/260814
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397667
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-28 03:09:15 PDT
<
rdar://problem/62503037
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug