RTCPeerConnection should not remove its created remote MediaStream objects until getting close https://bugs.webkit.org/show_bug.cgi?id=211070

Reviewed by Alex Christensen.

Source/WebCore:

Remove no longer needed code.
This aligns with the spec and Firefox implementation.
Test: webrtc/direction-change.html

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::transceiverBackendFromSender):
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:

LayoutTests:

* webrtc/direction-change-expected.txt: Added.
* webrtc/direction-change.html: Added.
* webrtc/routines.js:
* webrtc/video-setDirection-expected.txt:
* webrtc/video-setDirection.html:


Canonical link: https://commits.webkit.org/224009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260814 268f45cc-cd09-0410-ab3c-d52691b4dbfc